# rsklearn

./: .gitignore  Cargo.toml  README.md
datasets/: Cargo.toml
datasets/src/: lib.rs
dstump/: Cargo.toml
dstump/examples/: diabetes.rs  iris.rs
dstump/src/: lib.rs
dtree/: Cargo.toml
dtree/examples/: diabetes.rs  iris.rs
dtree/src/: lib.rs
linear/: Cargo.toml
linear/examples/: diabetes.rs
linear/src/: lib.rs
numrs/: Cargo.toml
numrs/src/: lib.rs
src/: entropy.rs  error.rs  lib.rs  prelude.rs
src/dataset/: impl_dataset.rs
zeror/: Cargo.toml  README.md
zeror/examples/: iris.rs
zeror/src/: lib.rs
