[package]
name = "rsklearn-datasets"
version = "0.1.0"
authors = ["Soichiro Ota <libarta.official@gmail.com>"]
description = "Collection of small datasets for Rsklearn"
edition = "2018"
repository = "https://github.com/SoichiroOta/rsklearn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsklearn = { version = "0.1.0", path = ".." }
ndarray = { version = "0.13", default-features = false }
ndarray-csv = "0.4"
csv = "1.1"
flate2 = "1.0"

[features]
default = []
diabetes = []
iris = []
winequality = []
